# researchmap2md

./: pyproject.toml
.github/workflows/: release.yml
src/researchmap2md/: __init__.py  researchmap2md.py
tests/: test_researchmap2md.py
tests/resources/: rm_industrial_property_rights.csv  rm_presentations.csv  rm_published_papers.csv
