# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.

[project]
name = "researchmap2md"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.1"  # REQUIRED, although can be dynamic
description = "Convert researchmap csv to markdown"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}

keywords = ["researchmap"]

authors = [
  {name = "pn11", email = "pn11@users.noreply.github.com" }
]

maintainers = [
  {name = "pn11", email = "pn11@users.noreply.github.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "polars"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/pn11/researchmap2md"
"Bug Reports" = "https://github.com/pn11/researchmap2md/issues"
"Source" = "https://github.com/pn11/researchmap2md"

[project.scripts]
researchmap2md = "researchmap2md:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"researchmap2md" = ["*.dat"]}
